Upgrade Java version to 21 and refactor URL handling to clean up deprecated constructors.